# BrownNoise

./: .gitignore  CMakeLists.txt  README.md
src/: AudioStreamAutoGen.h  AudioStreamFile.h  Controller.h  GetDir.h  Settings.h  main.cpp
